--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "fullstack-javascript-project-46",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
   "description": "[![Actions Status](https://github.com/AnastasiaYakushina/fullstack-javascript-project-46/workflows/hexlet-check/badge.svg)](https://github.com/AnastasiaYakushina/fullstack-javascript-project-46/actions)",
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^10.0.1"
+  }
 }
