--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "commander": "^10.0.1",
     "fs": "^0.0.1-security",
+    "js-yaml": "^4.1.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
