--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commander": "^10.0.1",
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "path": "^0.12.7"
   },
   "devDependencies": {
