--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
-  "main": "index.js",
+  "main": "src/compare.js",
   "scripts": {
     "test": "npx jest"
   },
